# pay-gas-with-orderbook

./: Cargo.toml  Forc.toml
demo_contract/: Cargo.toml  Forc.toml
demo_contract/src/: main.sw
demo_contract/tests/: harness.rs
limit-order-predicate/: Cargo.toml  Forc.toml
limit-order-predicate/src/: main.sw
limit-order-predicate/tests/: harness.rs
limit-order-predicate/tests/lib/: mod.rs
trader_account_predicate/: Forc.toml
trader_account_predicate/src/: main.sw
